# stock-streams

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
stockstreams/: main.py
