[tool.poetry]
name = "stock-streams"
version = "0.1.0"
description = ""
authors = ["Daniel Steman <daniel.steman@bridgefund.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.52"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
